# dtranslatebot

./: .gitattributes  CMakeLists.txt  Containerfile  README.md
.flatpak/: de.syping.dtranslatebot.yaml
.github/workflows/: container.yml  el.yml  linux-rpm.yml  windows.yml
cmake/: ArgumentPassthrough.cmake  DPPAsExternalProject.cmake  DPPStaticBundle.cmake  FindDPP.cmake
etc/: dtranslatebot.example.json  dtranslatebot.json
rpmspec/: dtranslatebot.spec  dtranslatebot.sysusersd
rpmsrc/: dtranslatebot.json  dtranslatebot.service  dtranslatebot.spec
src/: database_core.cpp  database_core.h  database_file.cpp  database_file.h  main.cpp  message_queue.cpp  message_queue.h  queue.cpp  queue.h  settings.cpp  settings.h  settings_types.h  slashcommands.cpp  slashcommands.h  submit_queue.cpp  submit_queue.h  translate_core.cpp  translate_core.h  translate_libretranslate.cpp  translate_libretranslate.h  translator_core.cpp  translator_core.h  translator_libretranslate.cpp  translator_libretranslate.h  webhook_push.cpp  webhook_push.h
src/cli/: main.cpp
src/core/: curl_exception.cpp  curl_exception.h  database.cpp  database.h  discord_bot.cpp  discord_bot.h  http_headers.cpp  http_headers.h  http_request.cpp  http_request.h  http_response.h  log.h  main.cpp  message_queue.cpp  message_queue.h  regex.h  settings.cpp  settings.h  settings_types.h  slashcommands.cpp  slashcommands.h  submit_queue.cpp  submit_queue.h  translator.cpp  translator.h  webhook_push.cpp  webhook_push.h
src/database/file/: file.cpp  file.h
src/gui/: main.cpp  translator_dialog.cpp  translator_dialog.h  user_config.cpp  user_config.h  user_interface.cpp  user_interface.h
src/resources/gui/: de.syping.dtranslatebot.desktop
src/resources/win32/: dtranslatebot.rc.in
src/systemd/: dtranslatebot.service.in  dtranslatebot.sysusersd.in
src/translator/deepl/: deepl.cpp  deepl.h
src/translator/libretranslate/: libretranslate.cpp  libretranslate.h
src/translator/lingvatranslate/: lingvatranslate.cpp  lingvatranslate.h
src/translator/mozhi/: mozhi.cpp  mozhi.h
src/translator/stub/: stub.cpp  stub.h
